--- a/index.html
+++ b/index.html
@@ -91,34 +91,34 @@
         <article>
             <h1>근비대(벌크업)</h1>
             <p>체지방이 늘면서 동시에 근육도 늘어납니다. 단기간에 몸을 키우고 싶으신 분들에게 추천드립니다.</p><br><br><br><br>
-            <img src="img/bulk.jpg" width="150px" height="100px">
+            <img src="bulk.jpg" width="150px" height="100px">
         </article>
 
         <article>
             <h1>스트렝스</h1>
             <p>힘을 키우는 것이 주 목적입니다. 몸을 만드는 것 보다 더 강해지는 데에 집중합니
             집중합니다. 힘을 키우는 것이 목적이신 분들에게 추천드립니다.</p><br><br>
-            <img src="img/power.jpg" width="150px" height="100px">
+            <img src="power.jpg" width="150px" height="100px">
             
         </article>
 
         <article>
             <h1>다이어트</h1>
             <p>체지방을 빼는 것이 주 목적입니다. 근육량을 유지 혹은 최소한으로 손실 하면서 체지방을 빼는 것입니다. 살을 빼고 싶으신 분들에게 추천드립니다.</p><br><br>
-            <img src="img/cut.jpg" width="150px" height="100px">
+            <img src="cut.jpg" width="150px" height="100px">
         </article>
 
         <article>
             <h1>근비대(린매스업)</h1>
             <p>체지방은 낮은 상태로 유지하면서 몸을 키우는 방식입니다. 벌크업보다 몸을 키우는 속도는 느리지만 체지방이 늘지 않는 장점이 있습니다.
                 낮은 체지방을 유지하고 싶으신 분들에게 추천드립니다.</p>
-                <img src="img/lean.jpg" width="150px" height="100px">
+                <img src="lean.jpg" width="150px" height="100px">
         </article>
 
         <article>
             <h1>근비대&스트렝스</h1>
             <p>몸을 키우면서 힘을 키우는 것이 주 목적입니다. 파워빌딩이라고도 불립니다. 몸도 커지고 싶고 힘도 키우고 싶으신 분들에게 추천드립니다.</p><br><br>
-            <img src="img/pb.jpg" width="150px" height="100px">
+            <img src="pb.jpg" width="150px" height="100px">
         </article>
         </div>
     </main>
